# Agentic-RAG-

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run_streamlit.py
additional_pdfs/: predefined_queries.json
app/: config.py  main.py
app/agents/: base_agent.py  pdf_agent.py  prompts.py
app/agents/tools/: base.py  document_tools.py  image_tools.py
app/core/: image_processor.py  logger.py  pdf_processor.py  table_processor.py  text_processor.py
app/core/models/: table_detection.py
app/database/: chroma_client.py  initialize_db.py
app/frontend/: streamlit_app.py
app/frontend/components/: pdf_uploader.py  query_interface.py  results_viewer.py
app/frontend/utils/: api_client.py  predefined_content.py
app/language_models/: llm.py
app/retrieval/: hybrid_retriever.py  reranker.py
app/scripts/: batch_upload.py
chroma_db/: chroma.sqlite3
logs/image_processing/captions/: analysis_20250103_013132.json  analysis_20250103_013227.json  analysis_20250103_014405.json  analysis_20250103_014452.json  analysis_20250103_014946.json  analysis_20250103_015037.json  analysis_20250103_015638.json  analysis_20250103_015722.json  analysis_20250103_020544.json  analysis_20250103_020633.json  analysis_20250103_023323.json  analysis_20250103_023419.json  analysis_20250103_023937.json  analysis_20250103_024019.json  caption_20250103_013132.txt  caption_20250103_013227.txt  caption_20250103_014405.txt  caption_20250103_014452.txt  caption_20250103_014946.txt  caption_20250103_015037.txt  caption_20250103_015638.txt  (+7 more)
